src/test/deca/context/valid/methodCall-simple.deca
class M{
    void call(){}
}

{
    M m;
    m.call();
}
