src/test/deca/context/invalid/methodCall-diffType.deca
class A{
    void m(int i){}
}

{
    A a;
    a.m(true);
}
